--- a/main.html
+++ b/main.html
@@ -8,6 +8,42 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form action="" method="post">
+        <label for="name">Name* </label>
+        <input type="text" id="name" placeholder="Name" required>
+<br>
+        <label for="email"> Email*  </label>
+        <input type="email" id="email" placeholder="Email" required>
+<br>
+        <label for="gender">Gender*</label><br>
+        <input type="radio" name="gender" id="gender_m" required> Male <br>
+        <input type="radio" name="gender" id="gender_f" required> Female <br>
+<br>
+        <label for="cars">car Brands</label>
+        <select name="" id="cars" required>
+            <option value="">BMW</option>
+            <option value="">Audi</option>
+            <option value="">Mercedez</option>
+<br>
+        </select>
+        <label for="age">Age*</label>
+        <input type="number" id="age" placeholder="Age" required>
+<br>
+        <label for="dob">DOB*</label>
+        <input type="date" id="dob" required>
+<br>
+        <label for="tel">Phone Number</label>
+        <input type="tel" id="tel">
+<br>
+        <label for="password">Password</label>
+        <input type="password" id=password placeholder="Password" required>
+<br>
+        <label for="checkbox" id="tos">Checkbox*</label>
+        <input type="checkbox" required><br>
+        <label for="tos">I agree to the TOS</label>
+        <button type="submit">submit</button>
+<br>
+    </form>
     <script type="text/javascript" src="./script.js">
 </script>
 
